# pySigma-backend-sumologic

./: README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/sumologic/: __init__.py  parsing.py  sumologic.py
sigma/pipelines/sumologic/: __init__.py  sumologic.py
tests/: test_backend_sumologic.py  test_backends_sumologic.py  test_pipelines_sumologic.py
