[tool.poetry]
name = "pySigma-backend-sumologic"
version = "0.1.0"
description = "pySigma backend for SumoLogic."
authors = ["Micah Babinski <m.babinski.88@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/mbabinski/pySigma-backend-sumologic"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.8.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
